# qdrant-indexer

./: .gitignore  .mcp.json  DESIGN.md  README.md  docker-compose.qdrant.yml  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.env.example  docker-compose.yml
.devcontainer/config/helix/: config.toml  languages.toml
.devcontainer/config/lazygit/: config.yml
.devcontainer/config/yazi/: yazi.toml
.devcontainer/config/zellij/: config.kdl
.devcontainer/config/zellij/layouts/: dev.kdl
.devcontainer/scripts/: entrypoint.sh
fixtures/: .qdrant-index-state.json  architecture.md  it.md  qdrant-index.yaml  sample.md
fixtures/docs/: api-reference.md  architecture.md  batch-processing.md  chunking-strategy.md  deployment.md  embedding-models.md  faq.md  migration-guide.md  monitoring.md  nested-test.md  performance.md  security.md  troubleshooting.md
megurip-docs/: .gitignore
megurip-docs-template/: CLAUDE.md
megurip-docs-template/.devcontainer/: devcontainer.json
megurip-docs/.devcontainer/scripts/: post-create.sh
src/qdrant_indexer/: __init__.py  chunker.py  cli.py  config.py  embedder.py  git_diff.py  indexer.py  models.py  state.py
tests/: conftest.py  test_chunker.py  test_config.py  test_embedder.py  test_git_diff.py  test_indexer.py  test_source_filter.py  test_state.py
